fix: align sitting mascot line with section boundary, shift peeking mascot up

--- a/src/components/Mooney/Mooney.module.css
+++ b/src/components/Mooney/Mooney.module.css
@@ -31,7 +31,7 @@
 
 .dividerMascot {
   position: absolute;
-  bottom: -120px;
+  bottom: -20px;
   left: 50%;
   transform: translateX(-50%);
   z-index: 10;
@@ -104,7 +104,7 @@
   z-index: 1;
   display: flex;
   justify-content: center;
-  margin-bottom: -50px;
+  margin-bottom: -70px;
   pointer-events: none;
 }
 
